# cargo-doc-docusaurus

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  Cargo.toml  ITERATION-SUMMARY.md  LICENSE-APACHE  NOTES.md  PLAN.md  PUBLISHING.md  README.md  Release.toml  SETUP.md  regenerate-example.sh
.github/workflows/: ci.yaml  publish-crate.yml  release.yaml  release.yml
example-docs/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars-rust.ts  sidebars.js  sidebars.ts  tsconfig.json
example-docs/docs/: sidebars.js
example-docs/src/: types.d.ts
example-docs/src/components/HomepageFeatures/: index.tsx
example-docs/src/components/RustCode/: index.tsx  styles.module.css
example-docs/src/components/RustCrateLink/: README.md  index.tsx  styles.module.css
example-docs/src/components/RustDocSidebar/: README.md
example-docs/src/components/RustModuleTitle/: README.md  index.tsx  styles.module.css
example-docs/src/css/: custom.css  rust-documentation.css
example-docs/src/pages/: index.tsx
src/: components.rs  converter.rs  lib.rs  main.rs  parser.rs  writer.rs
templates/: CSS_GUIDE.md  README.md  rust-documentation.css.txt
templates/DocSidebarItem/Link/: README.md  index.tsx.txt
templates/DocSidebarItemLink/: README.md  index.tsx.txt  styles.module.css.txt
templates/RustCode/: README.md
templates/RustDocSidebar/: README.md  index.tsx.txt
test-crate/src/: lib.rs
tests/: README.md  components_tests.rs  snapshot_tests.rs
tests/fixtures/: test_crate.json
tests/fixtures/test_crate/: Cargo.toml
tests/fixtures/test_crate/src/: async_example.rs  errors.rs  functions.rs  lib.rs  lifetimes.rs  nested.rs  patterns.rs  traits.rs  types.rs
tests/fixtures/test_workspace/: README.md  crate_a.json  crate_b.json
tests/fixtures/test_workspace/crate_a/src/: lib.rs
tests/fixtures/test_workspace/crate_b/src/: lib.rs
tests/snapshots/: snapshot_tests__functions_module.snap  snapshot_tests__index_md.snap  snapshot_tests__legacy_single_file.snap  snapshot_tests__lib_module.snap  snapshot_tests__multifile_structure.snap  snapshot_tests__nested_deep_module.snap  snapshot_tests__nested_inner_module.snap  snapshot_tests__nested_module.snap  snapshot_tests__types_module.snap
