[package]
name = "cargo-doc-docusaurus"
version = "0.7.5"
edition = "2024"
authors = ["Claude (Anthropic AI) <noreply@anthropic.com>"]
license = "MIT OR Apache-2.0"
description = "Cargo subcommand to generate Docusaurus-compatible documentation for Rust crates and dependencies"
readme = "README.md"
repository = "https://github.com/Hyperting/cargo-doc-docusaurus"
homepage = "https://github.com/Hyperting/cargo-doc-docusaurus"
keywords = ["cargo-subcommand", "docusaurus", "documentation", "rustdoc", "cargo"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[[bin]]
name = "cargo-doc-docusaurus"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
serde_json = "1.0.145"
rustdoc-types = { version = "0.56", features = ["rustc-hash"] }

[dev-dependencies]
insta = { version = "1.41", features = ["glob"] }
tempfile = "3.13"
